--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="buttons">
       <button class="expense-btn" onclick="location.href='AddExpense.html'">Add Expense</button>
-      <button class="rent-btn" onclick="location.href='add-rent.html'">Add Rent</button>
+      <button class="rent-btn" onclick="location.href='rent.html'">Add Rent</button>
     </div>
   </div>
 </body>
