--- a/AddExpense.html
+++ b/AddExpense.html
@@ -163,7 +163,7 @@
   </script>
 
   <script>
-    const webhookUrl = "https://jyy.app.n8n.cloud/webhook/add-expense";
+    const webhookUrl = "https://jyjy.app.n8n.cloud/webhook/add-expense";
 
     document.getElementById("expenseForm").addEventListener("submit", async function(e) {
       e.preventDefault();
