--- a/AddExpense.html
+++ b/AddExpense.html
@@ -138,7 +138,7 @@
     document.getElementById('todayDate').textContent = today;
 
     const dropdowns = ["llc", "services", "type", "subtype", "source", "paidTo"];
-    const n8nDropdownURL = "https://jyy.app.n8n.cloud/webhook/get-dropdowns";
+    const n8nDropdownURL = "https://jyjy.app.n8n.cloud/webhook/get-dropdowns";
 
     async function loadDropdowns() {
       try {
